Fix page scrollbar

--- a/neoplurkcss3.css
+++ b/neoplurkcss3.css
@@ -11,6 +11,7 @@
 
 body {
 	overflow-x: hidden;
+	overflow-y: scroll !important;
 	width: 100%;
 	min-width: 650px; 
 	min-height: 650px; 
@@ -287,6 +288,9 @@ body {
 	-moz-box-shadow:	none;
 	-webkit-box-shadow:	none;
 	box-shadow:			none;
+}
+.plurk_box .list {
+	max-height: 180px;
 }
 /* 回文右邊的選項 */
 .response_time {
